# KPYTbIE_TTEPCbI

./: .gitignore  CMakeLists.txt  README.md  algorithms.cpp  algorithms.h  run.bat
topological_sort/algorithms/: Demukrone_by_Balpeisov.cpp  Demukrone_by_Balpeisov.h  Kan_by_Volkov.cpp  Kan_by_Volkov.h  TaryanSort_by_Maslov.cpp  TaryanSort_by_Maslov.h  algorithms.cpp  algorithms.h  dfs_by_Makkoveeva.cpp  dfs_by_Makkoveeva.h  t.cpp
topological_sort/tests/: DataSetRegister.cpp  DataSetRegister.h  GraphReader.cpp  GraphReader.h  logger.cpp  logger.h  tests_functions.cpp  tests_functions.h
topological_sort/tests/datasets/: correctTS.txt  difficultGraph.txt  independent_components.txt
topological_sort/tests/datasets/files/: 10000-10000_graph.txt  10000-10000_graph_cycle.txt  10000-100_graph.txt  10000-30000_graph.txt  10000-5000_graph.txt  largeCorrectGraph.txt  largeCycleGraph.txt  smallCorrectGraph.txt  star_graph.txt
